# Trial_repo

./: README.md  pyproject.toml  rdkit1.py  textfile1.txt  trial2.txt
